--- a/AuctionApp/AuctionApp-ejb/nbproject/project.properties
+++ b/AuctionApp/AuctionApp-ejb/nbproject/project.properties
@@ -34,7 +34,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=AuctionApp-ejb.jar
-javac.classpath=
+javac.classpath=\
+    ${reference.AuctionAppLibrary.jar}
 javac.debug=true
 javac.deprecation=false
 javac.processorpath=${javac.classpath}
@@ -59,6 +60,8 @@ javadoc.windowtitle=
 meta.inf=${source.root}/conf
 meta.inf.excludes=sun-cmp-mappings.xml
 platform.active=default_platform
+project.AuctionAppLibrary=../../AuctionAppLibrary
+reference.AuctionAppLibrary.jar=${project.AuctionAppLibrary}/dist/AuctionAppLibrary.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
