Se creo una aplicacion de escritorio con un ejb statefull con los items que cada usuario subastara

--- a/AuctionApp-app-client/nbproject/project.properties
+++ b/AuctionApp-app-client/nbproject/project.properties
@@ -26,6 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.jcalendar-1.3.3.jar=C:\\Program Files\\NetBeans 8.0\\jcalendar-1.3.3.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=1.7
@@ -39,7 +40,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=AuctionApp-app-client.jar
 javac.classpath=\
-    ${reference.AuctionAppLibrary.jar}
+    ${reference.AuctionAppLibrary.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -62,7 +64,7 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=auctionappappclient.Main
+main.class=auctionappappclient.AuctionAppGUI
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
