--- a/AuctionApp-app-client/nbproject/project.properties
+++ b/AuctionApp-app-client/nbproject/project.properties
@@ -40,8 +40,8 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=AuctionApp-app-client.jar
 javac.classpath=\
-    ${reference.AuctionAppLibrary.jar}:\
-    ${file.reference.jcalendar-1.3.3.jar}
+    ${file.reference.jcalendar-1.3.3.jar}:\
+    ${reference.AuctionAppLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
