Cambio de version, proporcionada por humberto, ya no es la que se venia trabajando

--- a/AuctionApp/AuctionApp-war/nbproject/project.properties
+++ b/AuctionApp/AuctionApp-war/nbproject/project.properties
@@ -42,7 +42,8 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 javac.classpath=\
-    ${reference.AuctionApp-ejb.dist}
+    ${reference.AuctionApp-ejb.dist}:\
+    ${reference.AuctionAppLibrary.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -69,11 +70,12 @@ javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
 lib.dir=${web.docbase.dir}/WEB-INF/lib
-no.dependencies=false
 persistence.xml.dir=${conf.dir}
 platform.active=default_platform
 project.AuctionApp-ejb=../AuctionApp-ejb
+project.AuctionAppLibrary=../../AuctionAppLibrary
 reference.AuctionApp-ejb.dist=${project.AuctionApp-ejb}/dist/AuctionApp-ejb.jar
+reference.AuctionAppLibrary.jar=${project.AuctionAppLibrary}/dist/AuctionAppLibrary.jar
 resource.dir=setup
 run.test.classpath=\
     ${javac.test.classpath}:\
