--- a/AuctionApp/nbproject/project.properties
+++ b/AuctionApp/nbproject/project.properties
@@ -1,7 +1,8 @@
+app.client=AuctionApp-app-client
 build.classes.excludes=**/*.java,**/*.form,**/.nbattrs
 build.dir=build
 build.generated.dir=${build.dir}/generated
-client.module.uri=AuctionApp-war
+client.module.uri=AuctionApp/${app.client}
 client.urlPart=
 debug.classpath=${javac.classpath}::${jar.content.additional}:${run.classpath}
 display.browser=true
@@ -22,9 +23,9 @@ j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.content.additional=\
-    ${reference.AuctionApp-war.dist-ear}:\
     ${reference.AuctionApp-ejb.dist-ear}:\
-    ${reference.AuctionApp-app-client.j2ee-module-car}
+    ${reference.AuctionApp-app-client.j2ee-module-car}:\
+    ${reference.AuctionApp-war.dist-ear}
 jar.name=AuctionApp.ear
 javac.debug=true
 javac.deprecation=false
@@ -40,4 +41,5 @@ reference.AuctionApp-app-client.j2ee-module-car=${project.AuctionApp-app-client}
 reference.AuctionApp-ejb.dist-ear=${project.AuctionApp-ejb}/dist/AuctionApp-ejb.jar
 reference.AuctionApp-war.dist-ear=${project.AuctionApp-war}/dist/AuctionApp-war.war
 resource.dir=setup
+run.classpath=
 source.root=.
