--- a/AuctionApp-app-client/nbproject/project.properties
+++ b/AuctionApp-app-client/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.jcalendar-1.3.3.jar=C:\\Program Files\\NetBeans 8.0\\jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar=../jcalendar-1.3.3.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=1.7
@@ -40,6 +40,7 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=AuctionApp-app-client.jar
 javac.classpath=\
+    ${reference.AuctionApp-ejb.dist}:\
     ${file.reference.jcalendar-1.3.3.jar}:\
     ${reference.AuctionAppLibrary.jar}
 # Space-separated list of extra javac options
@@ -47,8 +48,8 @@ javac.compilerargs=
 javac.deprecation=false
 javac.processorpath=\
     ${javac.classpath}
-javac.source=1.6
-javac.target=1.6
+javac.source=1.7
+javac.target=1.7
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
@@ -64,11 +65,13 @@ javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
 javadoc.windowtitle=
-main.class=auctionappappclient.AuctionAppGUI
+main.class=auctionappappclient.Login
 manifest.file=${meta.inf}/MANIFEST.MF
 meta.inf=${source.root}/conf
 platform.active=default_platform
+project.AuctionApp-ejb=../AuctionApp/AuctionApp-ejb
 project.AuctionAppLibrary=../AuctionAppLibrary
+reference.AuctionApp-ejb.dist=${project.AuctionApp-ejb}/dist/AuctionApp-ejb.jar
 reference.AuctionAppLibrary.jar=${project.AuctionAppLibrary}/dist/AuctionAppLibrary.jar
 resource.dir=setup
 run.classpath=\
