--- a/AuctionApp-app-client/nbproject/project.properties
+++ b/AuctionApp-app-client/nbproject/project.properties
@@ -26,7 +26,7 @@ dist.javadoc.dir=${dist.dir}/javadoc
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
-file.reference.jcalendar-1.3.3.jar=../jcalendar-1.3.3.jar
+file.reference.jcalendar-1.3.3.jar=C:\\Users\\Curso\\Downloads\\jcalendar-1.3.3.jar
 includes=**
 j2ee.appclient.mainclass.args=${j2ee.appclient.tool.args}
 j2ee.platform=1.7
@@ -40,9 +40,10 @@ j2ee.server.type=gfv3ee6
 jar.compress=false
 jar.name=AuctionApp-app-client.jar
 javac.classpath=\
+    ${libs.JCalendar.classpath}:\
     ${reference.AuctionApp-ejb.dist}:\
-    ${file.reference.jcalendar-1.3.3.jar}:\
-    ${reference.AuctionAppLibrary.jar}
+    ${reference.AuctionAppLibrary.jar}:\
+    ${file.reference.jcalendar-1.3.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
